# cce

./: .gitignore  README.md  pyproject.toml  results.ml-1m.simple.auc  results.ml-1m.simple.ll  results.ml-1m.sparse2.auc  results.ml-1m.sparse2.ll
cce/: __init__.py  _tools.py  bloom.py  cce.py  cce_robe.py  ce.py  ce2.py  dhe.py  hash.py  hashnet.py  hemb.py  low_dimensional.py  rhemb.py  robe.py  simple.py  sparse.py  tt.py  wcce.py  weighted_hemb.py
docs/: index.html  styles.css  styles2.css  styles3.css
examples/: data.py  dataset.py  explore_chunks.py  movielens.py  run_all.py  run_all.sh
results/: cce_chunks  chunks.ml-1m.cce.auc  chunks.ml-20m.cce.auc  chunks.ml-25m.hemb-indep.auc  chunks.ml-25m.hemb.auc
results/ml-1m-30e/: results.ml-1m.auc  results.ml-1m.bloom.auc  results.ml-1m.bloom.ll  results.ml-1m.cce.auc  results.ml-1m.cce.ll  results.ml-1m.cce_robe.auc  results.ml-1m.cce_robe.ll  results.ml-1m.ce.auc  results.ml-1m.ce.ll  results.ml-1m.dhe.auc  results.ml-1m.dhe.ll  results.ml-1m.full.auc  results.ml-1m.full.ll  results.ml-1m.hemb.auc  results.ml-1m.hemb.ll  results.ml-1m.hemb2.auc  results.ml-1m.hemb2.ll  results.ml-1m.hnet.auc  results.ml-1m.hnet.ll  results.ml-1m.ldim.auc  results.ml-1m.ldim.ll  results.ml-1m.rhemb.auc  results.ml-1m.rhemb.ll  results.ml-1m.robe.auc  results.ml-1m.robe.ll  results.ml-1m.simple.auc  results.ml-1m.simple.ll  results.ml-1m.tt.auc  results.ml-1m.tt.ll  results.ml-1m.whemb.auc  results.ml-1m.whemb.ll
scripts/: dense.py  plot.py  plot_ncluster.py  plot_ncluster2.py  results  results2  results3  results_1m
tests/: conftest.py  test_all.py  test_ce.py  test_hash.py  test_ksvd.py  test_robe.py
(+250 files in other folders)
